--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "postprocessing": "^6.36.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "three": "^0.172.0"
+    "three": "^0.172.0",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
